--- a/pages/18608.html
+++ b/pages/18608.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1030,7 +1030,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>The <em>mass gap problem</em> is an open conceptual problem in the <a class="existingWikiWord" href="/nlab/show/quantization+of+Yang-Mills+theory">quantization of Yang-Mills theory</a>, closely related to what in the <a class="existingWikiWord" href="/nlab/show/phenomenology">phenomenology</a> of <a class="existingWikiWord" href="/nlab/show/quantum+chromodynamics">quantum chromodynamics</a> is called the <em><a class="existingWikiWord" href="/nlab/show/confinement">confinement</a></em> of <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a>.</p>
+<p>The <em>mass gap problem</em> is an open conceptual problem in the <a class="existingWikiWord" href="/nlab/show/quantization+of+Yang-Mills+theory">quantization of Yang-Mills theory</a>, closely related to what in the <a class="existingWikiWord" href="/nlab/show/phenomenology">phenomenology</a> of <a class="existingWikiWord" href="/nlab/show/quantum+chromodynamics">quantum chromodynamics</a> is called the <em><a class="existingWikiWord" href="/nlab/show/confinement">confinement</a></em> of <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a>, hence the existence of ordinary <a class="existingWikiWord" href="/nlab/show/hadron">hadronic</a>, in particular <a class="existingWikiWord" href="/nlab/show/baryon">baryonic</a> <a class="existingWikiWord" href="/nlab/show/matter">matter</a>.</p>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/Lagrangian">Lagrangian</a> for <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> coupled to <a class="existingWikiWord" href="/nlab/show/fermion+fields">fermion fields</a> (such as for <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>) makes manifest the existence of <a class="existingWikiWord" href="/nlab/show/mass">mass</a>-less <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> and <a class="existingWikiWord" href="/nlab/show/gluons">gluons</a>. Indeed at very higher <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> is thought to exhibit a <a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a> well described by these degrees of freedoms.</p>
 
@@ -1171,14 +1171,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 19, 2018 at 11:12:28.
+  Last revised on November 25, 2018 at 10:57:07.
   See the <a href="https://ncatlab.org/nlab/history/mass gap" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/mass+gap" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mass+gap/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/mass+gap" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mass+gap" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/mass+gap" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mass+gap/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/mass+gap" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mass+gap" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/mass gap/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
