--- a/pages/2237.html
+++ b/pages/2237.html
@@ -1166,10 +1166,16 @@ margin-left: 0em;
 
 <h3 id="general">General</h3>
 
-<p>A quick introduction is in</p>
+<p>Introduction is in</p>
 
 <ul>
-<li id="GreenleesMay"><a class="existingWikiWord" href="/nlab/show/John+Greenlees">John Greenlees</a>, <a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, section 3 of <em>Equivariant stable homotopy theory</em> (<a href="http://www.math.uchicago.edu/~may/PAPERS/Newthird.pdf">pdf</a>)</li>
+<li id="Blumberg17">
+<p><a class="existingWikiWord" href="/nlab/show/Andrew+Blumberg">Andrew Blumberg</a>, section 1.4 of <em>Equivariant homotopy theory</em>, 2017 (<a href="https://www.ma.utexas.edu/users/a.debray/lecture_notes/m392c_EHT_notes.pdf">pdf</a>, <a href="https://github.com/adebray/equivariant_homotopy_theory">GitHub</a>)</p>
+</li>
+
+<li id="GreenleesMay">
+<p><a class="existingWikiWord" href="/nlab/show/John+Greenlees">John Greenlees</a>, <a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, section 3 of <em>Equivariant stable homotopy theory</em> (<a href="http://www.math.uchicago.edu/~may/PAPERS/Newthird.pdf">pdf</a>)</p>
+</li>
 </ul>
 
 <p>Textbooks and lecture notes include</p>
@@ -1271,14 +1277,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 22, 2018 at 01:58:38.
+  Last revised on November 25, 2018 at 12:04:18.
   See the <a href="https://ncatlab.org/nlab/history/equivariant cohomology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+cohomology/52" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(52 revisions)</span> | <a href="/nlab/show/diff/equivariant+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+cohomology/53" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(53 revisions)</span> | <a href="/nlab/show/diff/equivariant+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/equivariant cohomology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
