--- a/pages/19958.html
+++ b/pages/19958.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9307/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9307/#Item_12" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -311,6 +311,26 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
+<h2 id="motivation">Motivation</h2>
+
+<p>There are many types of algebraic object which are ‘based’ on some type of groups. Examples include groups themselves, <a class="existingWikiWord" href="/nlab/show/modules">modules</a> over a ring, including, of course, vector spaces, then, adding more structure, <a class="existingWikiWord" href="/nlab/show/associative+algebras">associative algebras</a>, <a class="existingWikiWord" href="/nlab/show/commutative+algebras">commutative algebras</a>, <a class="existingWikiWord" href="/nlab/show/Lie+algebras">Lie algebras</a>, <a class="existingWikiWord" href="/nlab/show/Leibniz+algebras">Leibniz algebras</a>, <a class="existingWikiWord" href="/nlab/show/Poisson+algebras">Poisson algebras</a>, and then the dialgebras and trialgebras introduced by <a class="existingWikiWord" href="/nlab/show/Loday">Loday</a>, as well as <a class="existingWikiWord" href="/nlab/show/crossed+module">crossed module</a>s of groups. We will call these examples of <em>group-based universal algebras</em>.</p>
+
+<p>The similarities of the homological algebra of these settings suggested a study of what parts of that theory is common to all of these, and, conversely, what parts depend on particular properties of an example.</p>
+
+<h4 id="remark_on_terminology">Remark on terminology</h4>
+
+<p>Before giving the definition, we note that categories of such group-based universal algebras are more often called <em>categories of interest</em> in the literature. This term was introduced by Orzech in the first paper on their theory and, although very uninformative, has become fairly standard. Our preference for the title given here is that, hopefully, it does say more of the context of the ideas than merely saying they are ‘of interest’.</p>
+
+<h2 id="idea">Idea</h2>
+
+<p>In all these cases, the category, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding="application/x-tex">\mathcal{C}</annotation></semantics></math>, of such ‘algebras’ is <a class="existingWikiWord" href="/nlab/show/monadic">monadic</a> over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Set</mi></mrow><annotation encoding="application/x-tex">Set</annotation></semantics></math>. The monad, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mstyle mathvariant="bold"><mi>T</mi></mstyle><mo>=</mo><mo stretchy="false">(</mo><mi>T</mi><mo>,</mo><mi>η</mi><mo>,</mo><mi>μ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathbf{T}=(T,\eta,\mu)</annotation></semantics></math>, involved is such that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi><mo stretchy="false">(</mo><mi>∅</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">T(\emptyset)</annotation></semantics></math> is a singleton, the category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding="application/x-tex">\mathcal{C}</annotation></semantics></math> is <a class="existingWikiWord" href="/nlab/show/pointed">pointed</a>, with the algebra <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>T</mi><mo stretchy="false">(</mo><mi>∅</mi><mo stretchy="false">)</mo><mo>,</mo><msub><mi>μ</mi> <mi>∅</mi></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(T(\emptyset),\mu_\emptyset)</annotation></semantics></math>, that is the free algebra on the empty set, as its <a class="existingWikiWord" href="/nlab/show/zero+object">zero object</a>, and is complete and cocomplete. In fact, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding="application/x-tex">\mathcal{C}</annotation></semantics></math> is monadic over the category, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Set</mi> <mo>*</mo></msub></mrow><annotation encoding="application/x-tex">Set_*</annotation></semantics></math>, of <em>pointed sets</em>.</p>
+
+<p>Again in all these cases, the forgetful functor, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>U</mi><mo>:</mo><mi>𝒞</mi><mo>→</mo><msub><mi>Set</mi> <mo>*</mo></msub></mrow><annotation encoding="application/x-tex">U:\mathcal{C}\to Set_*</annotation></semantics></math> factors through the category of groups</p>
+
+<h3 id="definition">Definition</h3>
+
+<p>(Work in progress)</p>
+
 <p>A <em>category of interest</em>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝕏</mi></mrow><annotation encoding="application/x-tex">\mathbb{X}</annotation></semantics></math>, is a <a class="existingWikiWord" href="/nlab/show/variety+of+algebras">variety</a> of <a class="existingWikiWord" href="/nlab/show/universal+algebras">universal algebras</a> whose theory contains</p>
 
 <ul>
@@ -366,7 +386,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 25, 2018 at 12:50:26.
+  Last revised on November 25, 2018 at 13:43:00.
   See the <a href="https://ncatlab.org/nlab/history/category of interest" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
