--- a/pages/1788.html
+++ b/pages/1788.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -313,22 +313,26 @@ margin-left: 0em;
 <table><thead><tr><th></th><th><a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a></th><th><a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a></th></tr></thead><tbody><tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/non-abelian+cohomology">non-abelian cohomology</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/cohomotopy">cohomotopy</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/equivariant+cohomotopy">equivariant cohomotopy</a></td></tr>
 <tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology">stable cohomology</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a></td></tr>
 </tbody></table>
+<pre><code>                           [TV](http://threejsplaygnd.brangerbriz.net/s/?id=1)</code></pre>
+
 <p><a class="existingWikiWord" href="/nlab/show/flavours+of+cohomotopy+--+table">flavours of cohomotopy – table</a></p>
-<table><thead><tr><th>Table</th><th>me</th></tr></thead><tbody><tr><td style="text-align: left;">hi <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math></td><td style="text-align: left;">you <font></font>lightblue&gt;VisuaLiztm</td></tr>
-</tbody></table></body></html>
+<table><thead><tr><th>Table</th><th>me</th></tr></thead><tbody><tr><td style="text-align: left;">hi <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math></td><td style="text-align: left;">you</td></tr>
+</tbody></table>
+<pre><code> &lt;font color=lightblue&gt;VisuaLiztm&lt;/font&gt;</code></pre>
+</body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November 25, 2018 at 13:17:49.
+  Last revised on November 25, 2018 at 14:36:53.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1723" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1723 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1724" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1724 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
