--- a/pages/2083.html
+++ b/pages/2083.html
@@ -342,7 +342,9 @@ margin-left: 0em;
 
 <p>The older term <strong>group with operators</strong> is traditionally used for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ω</mi></mrow><annotation encoding="application/x-tex">\Omega</annotation></semantics></math>-groups when only unary operations are considered (as in the case of modules).</p>
 
-<p><a class="existingWikiWord" href="/nlab/show/Philip+Higgins">Philip Higgins</a> discussed a more general notion of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ω</mi></mrow><annotation encoding="application/x-tex">\Omega</annotation></semantics></math>-group, and Grace Orzech introduced an notion of extension in a special related setting known as a <a class="existingWikiWord" href="/nlab/show/category+of+interest">category of interest</a>.</p>
+<p><a class="existingWikiWord" href="/nlab/show/Philip+Higgins">Philip Higgins</a> discussed a more general notion of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ω</mi></mrow><annotation encoding="application/x-tex">\Omega</annotation></semantics></math>-group: a group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> endowed with a set <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ω</mi></mrow><annotation encoding="application/x-tex">\Omega</annotation></semantics></math> of finitary operations satisfying the condition that the neutral element of the group should form a one-element subalgebra.</p>
+
+<p>Grace Orzech introduced an notion of extension in a special related setting known as a <a class="existingWikiWord" href="/nlab/show/category+of+interest">category of interest</a>.</p>
 
 <h2 id="remarks">Remarks</h2>
 
@@ -381,14 +383,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 25, 2018 at 02:34:31.
+  Last revised on November 25, 2018 at 18:58:19.
   See the <a href="https://ncatlab.org/nlab/history/Omega-group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Omega-group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Omega-group/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/Omega-group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Omega-group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Omega-group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Omega-group/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/Omega-group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Omega-group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Omega-group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
