--- a/pages/19958.html
+++ b/pages/19958.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      category of interest in nLab
+      category of group-based universal algebras in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      category of interest
+      category of group-based universal algebras
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9307/#Item_12" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9307/#Item_17" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -312,6 +312,8 @@ margin-left: 0em;
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
 <h2 id="motivation">Motivation</h2>
+
+<p>Many categories of algebraic objects have similar properties. Classically <a class="existingWikiWord" href="/nlab/show/abelian+categories">abelian categories</a>, abstracted from categories of modules were central to homological algebra, but many important contexts were non-abelian, some as central as that of groups. In these non-abelian contexts various methods are used and research has centred on finding common frameworks to understand better both the resulting objects and morphisms and the interpretation of their homological algebra.</p>
 
 <p>There are many types of algebraic object which are ‘based’ on some type of groups. Examples include groups themselves, <a class="existingWikiWord" href="/nlab/show/modules">modules</a> over a ring, including, of course, vector spaces, then, adding more structure, <a class="existingWikiWord" href="/nlab/show/associative+algebras">associative algebras</a>, <a class="existingWikiWord" href="/nlab/show/commutative+algebras">commutative algebras</a>, <a class="existingWikiWord" href="/nlab/show/Lie+algebras">Lie algebras</a>, <a class="existingWikiWord" href="/nlab/show/Leibniz+algebras">Leibniz algebras</a>, <a class="existingWikiWord" href="/nlab/show/Poisson+algebras">Poisson algebras</a>, and then the dialgebras and trialgebras introduced by <a class="existingWikiWord" href="/nlab/show/Loday">Loday</a>, as well as <a class="existingWikiWord" href="/nlab/show/crossed+module">crossed module</a>s of groups. We will call these examples of <em>group-based universal algebras</em>.</p>
 
@@ -386,22 +388,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 25, 2018 at 15:17:33.
-  See the <a href="https://ncatlab.org/nlab/history/category of interest" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Last revised on November 26, 2018 at 01:51:38.
+  See the <a href="https://ncatlab.org/nlab/history/category of group-based universal algebras" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/category+of+interest" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/category+of+interest/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/category+of+interest" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/category+of+interest" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/category of interest/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/category+of+group-based+universal+algebras" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/category+of+group-based+universal+algebras/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/category+of+group-based+universal+algebras" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/category+of+group-based+universal+algebras" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/category of group-based universal algebras/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/category+of+interest" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/category+of+group-based+universal+algebras" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/category+of+interest" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/category+of+group-based+universal+algebras" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/category+of+interest" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/category+of+group-based+universal+algebras" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
