--- a/pages/2083.html
+++ b/pages/2083.html
@@ -346,7 +346,7 @@ margin-left: 0em;
 
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ω</mi></mrow><annotation encoding="application/x-tex">\Omega</annotation></semantics></math>-groups in the sense of Higgins form a <a class="existingWikiWord" href="/nlab/show/protomodular+category">protomodular category</a>, which is not in general strongly protomodular. A counterexample is provided by the category of digroups, i.e. sets with two group group structures that share the same neutral element.</p>
 
-<p>Grace Orzech introduced an notion of extension in a special related setting known as a <a class="existingWikiWord" href="/nlab/show/category+of+interest">category of interest</a>.</p>
+<p>Grace Orzech introduced a notion of extension in a special related setting known, somewhat opaguely, as a <em>category of interest</em>. (In the n-Lab we are trying out a perhaps more informative term_ <span class="newWikiWord">category of group-based universal algebras<a href="/nlab/new/category+of+group-based+universal+algebras">?</a></span>_</p>
 
 <h2 id="remarks">Remarks</h2>
 
@@ -383,14 +383,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 25, 2018 at 19:12:34.
+  Last revised on November 26, 2018 at 01:45:04.
   See the <a href="https://ncatlab.org/nlab/history/Omega-group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Omega-group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Omega-group/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/Omega-group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Omega-group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Omega-group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Omega-group/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/Omega-group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Omega-group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Omega-group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
